Run && delete && create modal window

--- a/modal_window/css/modal.css
+++ b/modal_window/css/modal.css
@@ -66,3 +66,11 @@
     margin: 5px;
     cursor: pointer;
 }
+.container-button ul li {
+margin: 0 0 10px 0;
+
+}
+.container-button button {
+    cursor: pointer;
+
+}
